# SentinelX-EDR-XDR

./: .env.example  .gitattributes  .gitignore  DEPLOYMENT.md  LICENSE  Makefile  README.md  docker-compose.yml
agent/cpp/: CMakeLists.txt
agent/cpp/src/: agent.cpp  agent.hpp  collectors.cpp  collectors.hpp  event.hpp  http_client.cpp  http_client.hpp  main.cpp  queue.cpp  queue.hpp
api-backend/: .dockerignore  Dockerfile  app.py  requirements.txt
certs/: README.md
dashboard/: .dockerignore  Dockerfile  index.html  package.json  pnpm-lock.yaml
dashboard/src/: App.jsx  styles.css
detection-engine/: .dockerignore  Dockerfile  detector.py  requirements.txt
detection-engine/cpp/rule_matcher/: CMakeLists.txt  rule_matcher.cpp
detection-engine/rules/: default.yml
docs/screenshots/: README.md
gateway/: .dockerignore  Dockerfile  app.py  requirements.txt
infra/clickhouse/: schema.sql
infra/postgres/: schema.sql
tests/: smoke_test.py
